--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 }
 
 .root{
-
   display: flex;
   flex-direction: column;
 }
@@ -24,8 +23,24 @@ body {
 header{
   background-color: #373b69;
   padding: 1rem;
-
+  display:flex;
+  justify-content: flex-end;
 }
+
+.search{
+  background-color: transparent;
+  border: 2px solid #22254b;
+  border-radius: 50px;
+  font-family: inherit;
+  font-size: 1.2rem;
+  padding: 0.5rem 1.5rem;
+  color:#fff;
+}
+
+.search:focus{
+  outline: none;
+}
+
 .movie-container{
   display: flex;
   flex-wrap: wrap;
@@ -42,7 +57,9 @@ header{
 }
 
 .movie img{
-  max-width: 100%;
+  object-fit: cover;
+  height: 450px;
+  width: 100%;
 }
 
 .movie-info{  
@@ -75,4 +92,23 @@ header{
 
 .movie:hover .movie-over{
   transform: translateX(0%);
+}
+
+.tag{
+  background-color:#22254b;
+  border-radius:5px;
+  font-weight: bold;
+  padding: 0.5rem;
+}
+
+.tag.green{
+  color: green;
+}
+
+.tag.orange{
+  color:orange;
+}
+
+.tag.red{
+  color:red;
 }
